--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,14 +1,7 @@
+@import "fonts.scss";
+@import "page__body.scss";
+@import "color-card.scss";
+@import "features__block.scss";
 @import "header.scss";
 @import "main.scss";
 @import "footer.scss";
-
-$basic-blue: #81B3D2;
-$basic-gray: #EEEEEE;
-
-.page__body{
-  font-family: "PT Sans", "Arial", sans-serif;
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 26px;
-  max-width: 320px;
-}
