--- a/source/sass/fonts.scss
+++ b/source/sass/fonts.scss
@@ -1,4 +1,4 @@
 @font-face {
-  font-family: PT Sans, sans-serif;
+  font-family: "PT Sans", sans-serif;
   src: url("https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap");
 }
