--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,7 +1,12 @@
 @import "colors.scss";
 @import "global/fonts.scss";
 @import "global/page.scss";
+@import "normalize.scss";
 @import "color-card.scss";
 @import "features.scss";
 @import "blocks/site-list/site-list.scss";
-@import "intro.scss";
+@import "blocks/intro/intro.scss";
+@import "description.scss";
+@import "town.scss";
+@import "interesting.scss";
+@import "social.scss";
