--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -3,5 +3,6 @@ $blue-hover: #669ec0;
 $blue-active: #5496bd;
 $basic-gray: #eeeeee;
 $gray-disable: #e5e5e5;
+$gray-iconbg: #e6e6e6;
 $basic-white: #ffffff;
 $basic-black: #000000;
