Общая стилизация блока контактная информация и представьтесь

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -6,6 +6,7 @@
 @import "features.scss";
 @import "site-list.scss";
 @import "intro.scss";
+@import "intro-form.scss";
 @import "description.scss";
 @import "town.scss";
 @import "interesting.scss";
@@ -13,3 +14,4 @@
 @import "link-size.scss";
 @import "item-logo.scss";
 @import "main-nav.scss";
+@import "form/form-feedback.scss";
