--- a/source/sass/form/form-feedback.scss
+++ b/source/sass/form/form-feedback.scss
@@ -119,10 +119,6 @@
 
 /*Блок "Общее впечатление/form-feedback__impression*/
 
-.form-feedback__impression {
-  position: relative;
-}
-
 .form-feedback__impression-list {
   list-style: none;
 }
@@ -136,7 +132,8 @@
 }
 
 .form-feedback__check {
-  padding-left: 30px;
+  padding-left: 35px;
+  font-weight: 700;
 }
 
 .form-feedback__check-input {
@@ -148,7 +145,7 @@
 
 .form-feedback__check-box {
   position: absolute;
-  margin-left: -65px;
+  margin-left: -75px;
   margin-top: -15px;
   width: 55px;
   height: 55px;
@@ -158,10 +155,62 @@
 
 .form-feedback__check-input:checked + .form-feedback__check-box {
   background-image: url("../../img/form/on.svg");
-  background-repeat: no-repeat;
+}
+
+.form-feedback__check-input:focus + .form-feedback__check-box {
+  background-image: url("../../img/form/focus-box.svg");
 }
 
 .form-feedback__check-input:checked:focus + .form-feedback__check-box {
   background-image: url("../../img/form/on-focus.svg");
-  background-repeat: no-repeat;
 }
+
+/*Блок "Посещаемые достопримечательности/form-feedback__attractions*/
+
+.form-feedback__attractions-list {
+  list-style: none;
+}
+
+.form-feedback__attractions-item {
+  margin-top: 43px
+}
+
+.form-feedback__attractions-item:last-child {
+  margin-bottom: 43px;
+}
+
+.from-feedback__attractions-check {
+  padding-left: 35px;
+  font-weight: 700;
+}
+
+.form-feedback__attractions-check-input {
+  position: absolute;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
+.form-feedback__attractions-check-box {
+  position: absolute;
+  margin-left: -75px;
+  margin-top: -15px;
+  width: 55px;
+  height: 55px;
+  background-repeat: no-repeat;
+  background-image: url("../../img/form/off-square.svg");
+}
+
+.form-feedback__attractions-check-input:checked + .form-feedback__attractions-check-box {
+  background-image: url("../../img/form/on-square.svg");
+}
+
+.form-feedback__attractions-check-input:focus + .form-feedback__attractions-check-box {
+  background-image: url("../../img/form/focus-square.svg");
+}
+
+.form-feedback__attractions-check-input:checked:focus + .form-feedback__attractions-check-box {
+  background-image: url("../../img/form/on-focus-square.svg");
+}
+
+
