Базовая стилизация каталога

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,18 +1,19 @@
 @import "variables.scss";
-@import "global/fonts.scss";
-@import "global/page.scss";
+@import "fonts.scss";
+@import "page.scss";
 @import "normalize.scss";
-@import "color-card.scss";
-@import "features.scss";
-@import "site-list.scss";
-@import "intro.scss";
-@import "intro-form.scss";
-@import "description.scss";
-@import "town.scss";
-@import "interesting.scss";
-@import "social.scss";
-@import "link-size.scss";
-@import "item-logo.scss";
-@import "main-nav.scss";
+@import "index/color-card.scss";
+@import "index/features.scss";
+@import "index/site-list.scss";
+@import "index/intro.scss";
+@import "index/description.scss";
+@import "index/town.scss";
+@import "index/interesting.scss";
+@import "index/social.scss";
+@import "index/link-size.scss";
+@import "index/item-logo.scss";
+@import "index/main-nav.scss";
+@import "form/intro-form.scss";
 @import "form/form-feedback.scss";
 @import "form/feedback__button.scss";
+@import "catalog/media.scss";
