--- a/source/sass/form-feedback.scss
+++ b/source/sass/form-feedback.scss
@@ -232,3 +232,29 @@
   color: $basic-black;
   font-weight: 700;
 }
+
+/*Кнопка "Оставить отзыв"*/
+
+.form-feedback__button {
+  background-color: $basic-blue;
+  font-size: 21px;
+  font-weight: 700;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: $basic-white;
+  padding: 17px 55px;
+  display: block;
+  margin: 0 auto;
+  margin-top: 51px;
+  margin-bottom: 76px;
+  max-width: 280px;
+  border: 0;
+}
+
+.form-feedback__button:hover{
+  background-color: $blue-hover;
+}
+
+.form-feedback__button:active{
+  background-color: $blue-active;
+}
