--- a/source/sass/main-nav.scss
+++ b/source/sass/main-nav.scss
@@ -1,17 +1,17 @@
-.site-list {
+.main-nav__list {
   padding: 0;
   margin: 0;
   position: relative;
 }
 
-.site-list__item {
+.main-nav__item {
   display: flex;
   align-items: center;
   justify-content: center;
   list-style: none;
 }
 
-.site-list__link {
+.main-nav__link {
   background-color: $basic-blue;
   color: $basic-white;
   font-weight: 700;
@@ -22,46 +22,46 @@
   box-shadow: 1px 1px 1px rgba(1, 1, 1, 0.2), inset 1px 1px 1px rgba(255, 255, 255, 0.2);
 }
 
-.site-list__link:hover {
+.main-nav__link:hover {
   background-color: $blue-hover;
 }
 
-.site-list__link:active {
+.main-nav__link:active {
   background-color: $blue-active;
 }
 
-.site-list__link span:active {
+.main-nav__link span:active {
   opacity: 0.3;
 }
 
-.site-list__link:active:disabled {
+.main-nav__link:active:disabled {
   background-color: $gray-disable;
   color: $basic-white;
 }
 
-.link-size--a {
+.main-nav__link--size-a {
   padding: 15px 123px;
 }
 
-.link-size--b {
+.main-nav__link--size-b {
   padding: 15px 97px;
 }
 
-.link-size--c {
+.main-nav__link--size-c {
   padding: 15px 93px;
 }
 
-.link-size--d {
+.main-nav__link--size-d {
   padding: 15px 97px 13px 97px;
 }
 
-.item-logo {
+.main-nav__item--logo {
   width: 320px;
   height: 55px;
   position: relative;
 }
 
-.item-logo::after{
+.main-nav__item--logo::after{
   content: "";
   background-repeat: no-repeat;
   background-position: 0 0;
