--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -2,18 +2,16 @@
 @import "fonts.scss";
 @import "page.scss";
 @import "normalize.scss";
-@import "index/color-card.scss";
-@import "index/features.scss";
-@import "index/site-list.scss";
-@import "index/intro.scss";
-@import "index/description.scss";
-@import "index/town.scss";
-@import "index/interesting.scss";
-@import "index/social.scss";
-@import "index/link-size.scss";
-@import "index/item-logo.scss";
-@import "index/main-nav.scss";
-@import "form/intro-form.scss";
-@import "form/form-feedback.scss";
-@import "form/feedback__button.scss";
-@import "catalog/media.scss";
+@import "color-card.scss";
+@import "features.scss";
+@import "intro.scss";
+@import "description.scss";
+@import "town.scss";
+@import "interesting.scss";
+@import "social.scss";
+@import "link-size.scss";
+@import "item-logo.scss";
+@import "main-nav.scss";
+@import "intro-form.scss";
+@import "form-feedback.scss";
+@import "media.scss";
