--- a/source/sass/form-feedback.scss
+++ b/source/sass/form-feedback.scss
@@ -127,7 +127,7 @@
   margin-top: 43px;
 }
 
-.form-feedback__impression-item:last-child{
+.form-feedback__impression-item:last-child {
   margin-bottom: 43px;
 }
 
@@ -172,7 +172,7 @@
 }
 
 .form-feedback__attractions-item {
-  margin-top: 43px
+  margin-top: 43px;
 }
 
 .form-feedback__attractions-item:last-child {
@@ -228,7 +228,7 @@
   padding: 20px 0 0 13px;
 }
 
-.form-feedback__description-text::-webkit-input-placeholder{
+.form-feedback__description-text::-webkit-input-placeholder {
   color: $basic-black;
   font-weight: 700;
 }
@@ -251,10 +251,10 @@
   border: 0;
 }
 
-.form-feedback__button:hover{
+.form-feedback__button:hover {
   background-color: $blue-hover;
 }
 
-.form-feedback__button:active{
+.form-feedback__button:active {
   background-color: $blue-active;
 }
