--- a/source/sass/page.scss
+++ b/source/sass/page.scss
@@ -2,21 +2,14 @@
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 18px;
   font-weight: 400;
-  line-height: 26px;
   max-width: 320px;
+  line-height: 26px;
   padding: 0;
   margin: 0 auto;
 }
 
-.visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-  white-space: nowrap;
-  clip-path: inset(100%);
-  clip: rect(0 0 0 0);
-  overflow: hidden;
+@media (min-width: $tablet-width) {
+  .page__body {
+    max-width: $tablet-width-container;
+  }
 }
