--- a/source/sass/main-nav.scss
+++ b/source/sass/main-nav.scss
@@ -86,3 +86,38 @@
   cursor: pointer;
 }
 
+@media (min-width: $tablet-width) {
+  .main-nav__list {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+  }
+  .main-nav__item {
+    width: 20%;
+  }
+  .main-nav__item:nth-child(1),
+  .main-nav__item:nth-child(2) {
+    order: 0;
+  }
+  .main-nav__item:nth-child(3) {
+    order: 2;
+  }
+  .main-nav__item:nth-child(4) {
+    order: 3;
+  }
+  .main-nav__item:last-child {
+    order: 1;
+  }
+  .main-nav__link {
+    padding: 0;
+    color: $basic-black;
+    background-color: $basic-white;
+    box-shadow: none;
+  }
+  .main-nav__item--logo::after {
+    left: 22%;
+  }
+  .main-nav__toggle {
+    display: none;
+  }
+}
