--- a/source/sass/page.scss
+++ b/source/sass/page.scss
@@ -13,3 +13,9 @@
     max-width: $tablet-width-container;
   }
 }
+
+@media (min-width: $desktop-width) {
+  .page__body {
+    max-width: $desktop-width-container;
+  }
+}
