--- a/source/sass/intro.scss
+++ b/source/sass/intro.scss
@@ -15,3 +15,19 @@
   left: 5%;
   position: absolute;
 }
+
+@media (min-width: $tablet-width) {
+  .intro {
+    margin: 0 auto;
+    background-image: url("../img/tablet/bg-tablet-desktop.jpg");
+    width: 767px;
+    height: 518px;
+  }
+  .intro__title {
+    background-image: url("../../../img/tablet/text-index-tablet.svg");
+    width: 461px;
+    height: 350px;
+    top: 15%;
+    left: 19%;
+  }
+}
