--- a/source/sass/town.scss
+++ b/source/sass/town.scss
@@ -88,10 +88,11 @@
   .town__food{
     width: 192px;
     height: 185px;
+    margin-left: 0;
   }
   .town__souvenirs,
   .town__food {
-    margin-left: 75px;
+    margin-left: 65px;
   }
   .town__title {
     margin-top: 75px;
@@ -107,16 +108,16 @@
   .town__housing::before {
     background-image: url("../img/tablet/icon-house-tablet.svg");
     top: 10%;
-    left: 16%;
+    left: 60px;
   }
   .town__souvenirs::before {
     background-image: url("../img/tablet/icon-gift-tablet.svg");
     top: 6%;
-    left: 50%;
+    left: 321px;
   }
   .town__food::before {
     background-image: url("../img/tablet/icon-burger-tablet.svg");
     top: 9%;
-    left: 83%;
+    left: 573px;
   }
 }
