--- a/source/sass/interesting.scss
+++ b/source/sass/interesting.scss
@@ -40,14 +40,24 @@
 
 @media (min-width: $tablet-width) {
   .interesting {
-    width: 435px;
+    width: 768px;
     margin: 0 auto;
     margin-top: 58px;
+    margin-bottom: 50px;
   }
   .interesting__title {
     font-size: 26px;
   }
   .interesting__text {
     word-wrap: 400px;
+  }
+  .interesting__map {
+    display: none;
+  }
+  .interesting__map-container{
+    background-image: url("../img/tablet/tablet-map.jpg");
+    height: 350px;
+    width: 768px;
+    margin-top: 58px;
   }
 }
