--- a/source/sass/intro.scss
+++ b/source/sass/intro.scss
@@ -31,3 +31,15 @@
     left: 19%;
   }
 }
+
+@media (min-width: $desktop-width) {
+  .intro {
+    margin: 0 auto;
+    background-image: url("../img/desktop/intro.jpg");
+    width: 1200px;
+    height: 518px;
+  }
+  .intro__title {
+    left: 31%;
+  }
+}
