--- a/source/sass/main-nav.scss
+++ b/source/sass/main-nav.scss
@@ -87,6 +87,10 @@
 }
 
 @media (min-width: $tablet-width) {
+  .main-nav {
+    max-width: 768px;
+    margin: 0 auto;
+  }
   .main-nav__list {
     display: flex;
     flex-wrap: wrap;
@@ -124,6 +128,9 @@
 }
 
 @media (min-width: $desktop-width) {
+  .main-nav {
+    max-width: 1200px;
+  }
   .main-nav__item--logo::after {
     background-image: url("../../../img/desktop/logotype-desktop.svg");
     width: 187px;
