--- a/8/css/style.css
+++ b/8/css/style.css
@@ -11,7 +11,7 @@
   font-weight: 700;
   font-style: normal; }
 
-.page__body {
+.page__container {
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 18px;
   font-weight: 400;
@@ -21,11 +21,11 @@
   margin: 0 auto; }
 
 @media (min-width: 768px) {
-  .page__body {
+  .page__container {
     max-width: 1199px; } }
 
 @media (min-width: 1200px) {
-  .page__body {
+  .page__container {
     max-width: 1200px; } }
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
@@ -389,7 +389,9 @@ template {
   .features {
     display: flex;
     flex-wrap: wrap;
-    margin-top: 59px; }
+    margin: 0 auto;
+    margin-top: 59px;
+    max-width: 768px; }
   .features__container {
     background-image: url("../img/tablet/devil-bridge.jpg");
     background-repeat: no-repeat;
@@ -414,6 +416,8 @@ template {
     margin: 15px 0 20px 0; } }
 
 @media (min-width: 1200px) {
+  .features {
+    max-width: 1200px; }
   .features__container {
     background-image: url("../img/desktop/photo-bridge.jpg");
     background-size: auto; }
@@ -423,42 +427,25 @@ template {
     width: 270px; } }
 
 .intro {
-  background-image: url("../img/header/back-mobile.jpg.jpg");
+  background-image: url("../img/header/logo-mobile.jpg");
   background-repeat: no-repeat;
   width: 320px;
-  height: 332px;
+  height: 390px;
   position: relative; }
-
-.intro__title {
-  background-image: url("../../../img/header/text-index.svg");
-  background-repeat: no-repeat;
-  width: 320px;
-  height: 332px;
-  top: 27%;
-  left: 5%;
-  position: absolute; }
 
 @media (min-width: 768px) {
   .intro {
     margin: 0 auto;
-    background-image: url("../img/tablet/bg-tablet-desktop.jpg");
+    background-image: url("../img/tablet/logo-tablet.jpg");
     width: 767px;
-    height: 518px; }
-  .intro__title {
-    background-image: url("../../../img/tablet/text-index-tablet.svg");
-    width: 461px;
-    height: 350px;
-    top: 15%;
-    left: 19%; } }
+    height: 518px; } }
 
 @media (min-width: 1200px) {
   .intro {
     margin: 0 auto;
-    background-image: url("../img/desktop/intro.jpg");
+    background-image: url("../img/desktop/logo-desktop.jpg");
     width: 1200px;
-    height: 518px; }
-  .intro__title {
-    left: 31%; } }
+    height: 518px; } }
 
 .description__title {
   margin: 0 auto;
@@ -540,7 +527,8 @@ template {
 
 @media (min-width: 768px) {
   .town {
-    margin-top: 40px; }
+    margin-top: 40px;
+    max-width: 768px; }
   .town__title,
   .town__text {
     text-align: center; }
@@ -548,7 +536,10 @@ template {
   .town__container {
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap; }
+    flex-wrap: wrap;
+    margin: 0 auto;
+    margin-top: 58px;
+    position: relative; }
   .town__img {
     display: none; }
   .town__img-container {
@@ -556,10 +547,6 @@ template {
     background-repeat: no-repeat;
     width: 66%;
     height: 253px; }
-  .town__container {
-    margin: 0 auto;
-    margin-top: 58px;
-    position: relative; }
   .town__housing,
   .town__souvenirs,
   .town__food {
@@ -610,7 +597,9 @@ template {
   .town__img {
     display: none; }
   .town__img-container {
-    background-image: url("../img/desktop/photo-city-desktop.jpg"); } }
+    background-image: url("../img/desktop/photo-city-desktop.jpg"); }
+  .town {
+    max-width: 1200px; } }
 
 .interesting__title {
   font-size: 21px; }
@@ -865,6 +854,9 @@ template {
   cursor: pointer; }
 
 @media (min-width: 768px) {
+  .main-nav {
+    max-width: 768px;
+    margin: 0 auto; }
   .main-nav__list {
     display: flex;
     flex-wrap: wrap;
@@ -892,6 +884,8 @@ template {
     display: none; } }
 
 @media (min-width: 1200px) {
+  .main-nav {
+    max-width: 1200px; }
   .main-nav__item--logo::after {
     background-image: url("../../../img/desktop/logotype-desktop.svg");
     width: 187px;
