--- a/source/sass/form-feedback.scss
+++ b/source/sass/form-feedback.scss
@@ -258,3 +258,82 @@
 .form-feedback__button:active {
   background-color: $blue-active;
 }
+
+.form-feedback__addition {
+  display: none;
+}
+
+@media (min-width: $tablet-width) {
+  .form-feedback {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin: 0 auto;
+    max-width: 768px;
+    justify-content: space-between;
+  }
+  .form-feedback__impression {
+    order: -1;
+  }
+  .form-feedback__connection{
+    margin: 0 auto;
+  }
+  .form-feedback__impression-list{
+    padding-left: 18px;
+  }
+  .form-feedback__title{
+    text-align: start;
+  }
+  .form-feedback__data-info input{
+    padding: 20px 468px 20px 43px;
+  }
+  .form-feedback__decoration-phone-container,
+  .form-feedback__decoration-mail-container {
+    width: 60px;
+    height: 60px;
+    top: 34%;
+    left: 709px;
+  }
+  .form-feedback__representation,
+  .form-feedback__connection,
+  .form-feedback__impression,
+  .form-feedback__attractions,
+  .form-feedback__description {
+    border-top: none;
+    max-width: 768px;
+  }
+  .form-feedback__attractions {
+    margin: 0 auto;
+    min-width: 490px;
+  }
+  .form-feedback__attractions-list {
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .form-feedback__attractions-item {
+    margin-top: 43px;
+    margin-left: 105px;
+  }
+  .form-feedback__attractions-item:last-child {
+    margin-left: 125px;
+  }
+  .form-feedback__title-attractions {
+    text-align: center;
+  }
+  .form-feedback__description-text {
+    min-width: 768px;
+  }
+  .form-feedback__description-text input {
+    font-size: 180px;
+  }
+  .form-feedback__button {
+    margin-left: 0;
+    padding: 17px 75px;
+    max-width: 324px;
+  }
+  .form-feedback__addition{
+    display: block;
+    margin-top: 78px;
+  }
+}
