--- a/source/sass/intro-form.scss
+++ b/source/sass/intro-form.scss
@@ -8,10 +8,18 @@
 
 @media (min-width: $tablet-width) {
   .intro-form {
-    background-image: url("../img/form/tablet/logo-form-tablet.jpg");
+    background-image: url("../img/form/logo-form-tablet.jpg");
     background-repeat: no-repeat;
     width: 768px;
     height: 350px;
     margin: 0 auto;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .intro-form {
+    background-image: url("../img/form/logo-form-desktop.jpg");
+    width: 1200px;
+    height: 370px;
   }
 }
