--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -13,4 +13,5 @@
 @import "intro-form.scss";
 @import "form-feedback.scss";
 @import "media.scss";
-@import "global.scss"
+@import "global.scss";
+@import "feedback.scss";
