--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -6,6 +6,7 @@ $basic-gray: #eeeeee;
 $gray-disable: #e5e5e5;
 $gray-iconbg: #e6e6e6;
 $gray-input: #f2f2f2;
+$gray-input2: #eaeaea;
 $basic-white: #ffffff;
 $basic-black: #000000;
 
