Исправление блока фото и видео для версии планшет/десктоп

--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -9,6 +9,7 @@ $gray-input: #f2f2f2;
 $gray-input2: #eaeaea;
 $basic-white: #ffffff;
 $basic-black: #000000;
+$black-transperent: rgba(0,0,0,.3);
 
 //Template breakpoints
 $mobile-width: 320px;
