--- a/source/sass/media.scss
+++ b/source/sass/media.scss
@@ -77,6 +77,11 @@
     justify-content: space-between;
     background-color: $gray-input;
   }
+  .media__caption-opacity {
+    display: flex;
+    justify-content: space-between;
+    width: 648px;
+  }
   .media__likes {
     padding: 30px 0 0 0;
     margin-right: 20px;
@@ -137,8 +142,7 @@
     position: relative;
   }
   .media__caption-container {
-    background-color: $basic-black;
-    opacity: 0.3;
+    background-color: $black-transperent;
     position: absolute;
     top: 186px;
     color: $basic-white;
@@ -152,11 +156,11 @@
   .media__like-container {
     position: absolute;
     top: 29px;
-    left: 205px;
+    left: 314px;
   }
   .media__like-position {
     top: 29px;
-    left: 174px;
+    left: 1106px;
   }
   .media__like-icon path {
     fill: $basic-white;
