--- a/source/sass/color-card.scss
+++ b/source/sass/color-card.scss
@@ -1,5 +1,27 @@
 .color-card {
   background-color: $basic-blue;
+  margin-top: 30px;
+  position: relative;
+}
+
+.color-card__container {
+  padding: 52px 0 35px 0;
+}
+
+.color-card__container-fix {
+  padding: 37px 0 30px 0;
+}
+
+.color-card__container-deg::before {
+  content: "";
+  background-image: url("../img/main/deg-mobile.png");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  width: 320px;
+  height: 37px;
+  top: -8%;
+  left: 0%;
+  position: absolute;
 }
 
 .color-card__title {
@@ -18,6 +40,14 @@
   text-align: center;
   color: $basic-white;
   margin: 0;
+}
+
+.color-card__number {
+  margin-top: 8px;
+}
+
+.color-card__text {
+  margin-top: 9px;
 }
 
 @media (min-width: $tablet-width) {
