--- a/source/sass/interesting.scss
+++ b/source/sass/interesting.scss
@@ -1,9 +1,14 @@
 .interesting__title {
   font-size: 21px;
+  margin: 0;
+  margin-top: 30px;
 }
 
 .interesting__text {
   font-size: 14px;
+  margin: 0 auto;
+  margin-top: 20px;
+  width: 265px;
 }
 
 .interesting__title,
@@ -19,10 +24,11 @@
   text-transform: uppercase;
   text-decoration: none;
   color: $basic-white;
-  padding: 17px 43px;
+  padding: 17px 47px;
   display: block;
   margin: 0 auto;
   max-width: 186px;
+  margin-top: 22px;
 }
 
 .interesting__search:hover {
@@ -33,9 +39,9 @@
   background-color: $blue-active;
 }
 
-.interesting__map {
+.interesting__map-container {
   display: block;
-  margin-top: 40px;
+  margin-top: 48px;
 }
 
 @media (min-width: $tablet-width) {
