--- a/source/sass/social.scss
+++ b/source/sass/social.scss
@@ -1,7 +1,12 @@
+.social {
+  margin-top: 32px;
+}
+
 .social__title {
   font-size: 21px;
   text-transform: uppercase;
   text-align: center;
+  margin: 0px 0 15px 0px;
 }
 
 .social__item {
@@ -29,10 +34,10 @@
   background-position: 0 0;
   background-repeat: no-repeat;
   background-image: url("../img/footer/icon-facebook.svg");
-  width: 16px;
-  height: 15px;
-  top: 36%;
-  left: 41%;
+  width: 11px;
+  height: 19px;
+  top: 31%;
+  left: 42%;
 }
 
 .social__item:last-child::before {
@@ -74,6 +79,7 @@
 .social__links {
   max-width: 162px;
   margin: 0 auto;
+  margin-top: 44px;
 }
 
 .social__dev {
@@ -85,8 +91,8 @@
   text-decoration: none;
   color: $basic-black;
   position: relative;
-  margin-top: 30px;
-  margin-bottom: 21px;
+  margin-top: 55px;
+  padding-right: 5px;
 }
 
 .social__dev::after {
@@ -97,7 +103,7 @@
   width: 30px;
   height: 35px;
   top: -16%;
-  left: 84%;
+  left: 80%;
   position: absolute;
 }
 
