--- a/source/sass/town.scss
+++ b/source/sass/town.scss
@@ -10,6 +10,11 @@
 .town__text {
   font-size: 14px;
   margin: 0;
+  margin-top: 5px;
+}
+
+.town__text-mobile {
+  max-width: 220px;
 }
 
 .town__title,
@@ -21,7 +26,7 @@
 .town__souvenirs,
 .town__food {
   margin-left: 70px;
-  margin-top: 30px;
+  margin-top: 27px;
 }
 
 .town__housing::before {
@@ -32,7 +37,7 @@
   position: absolute;
   width: 40px;
   height: 40px;
-  top: 53%;
+  top: 58%;
   left: 7%;
 }
 
@@ -44,8 +49,8 @@
   position: absolute;
   width: 40px;
   height: 40px;
-  top: 71%;
-  left: 7%;
+  top: 73%;
+  left: 8%;
 }
 
 .town__food::before {
