--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -7,6 +7,7 @@ $gray-disable: #e5e5e5;
 $gray-iconbg: #e6e6e6;
 $gray-input: #f2f2f2;
 $gray-input2: #eaeaea;
+$gray-border: #d6d6d6;
 $basic-white: #ffffff;
 $basic-black: #000000;
 $black-transperent: rgba(0,0,0,.3);
