--- a/source/sass/color-card.scss
+++ b/source/sass/color-card.scss
@@ -57,9 +57,23 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin: 0;
+  }
+  .color-card__title{
+    font-size: 21px;
+    margin: 0 auto;
+    width: 150px;
   }
   .color-card__text {
-    width: 200px;
+    width: 190px;
+    line-height: 1.5;
+    margin-top: 22px;
+  }
+  .color-card__container {
+    padding: 29px 0 28px 0;
+  }
+  .color-card__container-deg::before {
+    display: none;
   }
 }
 
