Стилизация главная страница - планшет

--- a/source/sass/features.scss
+++ b/source/sass/features.scss
@@ -72,7 +72,6 @@
   .features__block {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     width: 256px;
     height: 256px;
   }
@@ -86,17 +85,18 @@
     margin-top: 25px;
   }
   .features__text {
-    width: 165px;
+    width: 180px;
     margin: 0 auto;
+    line-height: 1.7;
   }
   .features__text-width {
-    width: 180px;
+    width: 145px;
   }
   .features__number-tablet {
     margin: 11px 0 21px 0;
   }
   .features__number {
-    margin: 15px 0 20px 0;
+    margin: 15px 0 11px 0;
   }
 }
 
