--- a/source/sass/main-nav.scss
+++ b/source/sass/main-nav.scss
@@ -40,19 +40,19 @@
 }
 
 .main-nav__link--size-a {
-  padding: 15px 123px;
+  padding: 15px 131px;;
 }
 
 .main-nav__link--size-b {
-  padding: 15px 97px;
+  padding: 15px 111px;
 }
 
 .main-nav__link--size-c {
-  padding: 15px 93px;
+  padding: 15px 108px;
 }
 
 .main-nav__link--size-d {
-  padding: 15px 97px 13px 97px;
+  padding: 15px 111px 13px 111px;
 }
 
 .main-nav__item--logo {
