--- a/source/sass/interesting.scss
+++ b/source/sass/interesting.scss
@@ -52,10 +52,16 @@
     margin-bottom: 50px;
   }
   .interesting__title {
-    font-size: 26px;
+    font-size: 30px;
   }
   .interesting__text {
-    word-wrap: 400px;
+    font-size: 14px;
+    margin: 0 auto;
+    margin-top: 32px;
+    width: 440px;
+  }
+  .interesting__text-addition{
+    display: block;
   }
   .interesting__map {
     display: none;
@@ -67,8 +73,9 @@
     margin-top: 58px;
   }
   .interesting__search {
-    max-width: 458px;
     text-align: center;
+    margin-top: 36px;
+    padding: 17px 137px;
   }
 }
 
